--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-# Ignore everything but two folders
-/*
+# !/*
+# # Ignore everything but two folders
+# /*
 
-# Files to not ignore
-!/.gitignore
+# # Files to not ignore
+# !/.gitignore
 
-# Folders to not ignore
-!/src/hero/
-!/test/
+# # Folders to not ignore
+# !/src/hero/unstable/
+# !/test/
 
 .settings
 bin
